# WTK

./: README.md  results.csv
data/UCR/raw_data/DistalPhalanxTW/: DistalPhalanxTW_TEST
examples/: Pipfile  README.md  example_notebook.ipynb  kernels.py  main.py  utilities.py
src/: README.md  pyproject.toml
src/wtk/: __init__.py  requirements.txt  utilities.py
